--- a/en/i/irregular galaxy.802551.wikitext
+++ b/en/i/irregular galaxy.802551.wikitext
@@ -7,8 +7,10 @@
 # {{astronomy}} A [[galaxy]] which is has no [[spiral]]s and is not [[elliptical]].
 #:''The Magellanic Clouds are '''irregular galaxies'''.''
 
-====Derived terms====
+====Abbreviations====
 * [[IrG]], [[Irr]]
+
+====Derived terms====
 * [[dwarf irregular galaxy]]
 * [[barred irregular galaxy]]
 
