/* {{abbreviation}} */ wife of <w/o#5592778>

--- a/en/w/w/o.26235.wikitext
+++ b/en/w/w/o.26235.wikitext
@@ -5,6 +5,7 @@
 
 # [[with]] [[out]]; [[without]]
 # {{context|finance|insurance}} [[write]] [[off]]; [[write-off]]
+# Wife of (E.g. Sandy Steven, W/o Steven)
 
 ====Related terms====
 * [[w/]]
