--- a/en/g/grid electricity.776660.wikitext
+++ b/en/g/grid electricity.776660.wikitext
@@ -3,4 +3,10 @@
 ===Noun===
 {{infl|en|noun|head=[[grid]] [[electricity]]}}
 
-# energy delivered to a building from the [[w:public electricity network|public electricity network]].
+# Electric energy delivered to a consumer from the [[w:public electricity network|public electricity network]].
+
+====Translations====
+{{top}}
+* Finish: {{t|fi|verkkosähkö}}
+{{mid}}
+{{bottom}}
