--- a/en/e/energy carrier.776563.wikitext
+++ b/en/e/energy carrier.776563.wikitext
@@ -4,7 +4,13 @@
 ===Noun===
 {{en-noun}}
 
-# An energy carrier is a substance or phenomenon that can be used to produce mechanical work or heat or to operate chemical or physical processes ([[w:ISO 13600|ISO 13600]]). [[energyware|Energyware]]s form a proper subset of energy carriers
-: [[solar radiation]] is an energy carrier that is not an energyware.
+# A substance or phenomenon that can be used to produce mechanical work or heat or to operate chemical or physical processes ([[w:ISO 13600|ISO 13600]]).
+#: ''Solar radiation is an '''energy carrier''' that is not an energyware.''
+
+====Translations====
+{{top}}
+* Finnish: {{t|fi|energianlähde}}
+{{mid}}
+{{bottom}}
 
 [[ar:energy carrier]]
