/* Noun */ Finnish translation <energy source#5596618>

--- a/en/e/energy source.776613.wikitext
+++ b/en/e/energy source.776613.wikitext
@@ -3,6 +3,12 @@
 ===Noun===
 {{en-noun|sg=[[energy]] [[source]]}}
 
-# source from which useful energy can be extracted or recovered either directly or by means of a conversion or transformation process (e.g. solid fuels, liquid fuels, solar energy, biomass, etc.)
+# A source from which useful energy can be extracted or recovered either directly or by means of a conversion or transformation process (e.g. solid fuels, liquid fuels, [[solar energy]], [[biomass]], etc.)
+
+====Translations====
+{{top}}
+* Finnish: {{t|fi|energianlähde}}
+{{mid}}
+{{bottom}}
 
 [[ta:energy source]]
