--- a/en/i/ingenui.746538.wikitext
+++ b/en/i/ingenui.746538.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-'''ingenui'''
+{{infl|en|noun}}
 
 # {{legal}} In [[civil law]], a class of [[freemen]] who were born [[free]]. They were distinguished from the class known as ''[[liberti]]'' or ''[[libertini]]'' who, born slaves, had afterwards legally obtained their freedom. 
 
