/* Verb */ Registered user on Wikipedia here (Snoito); wrong word in bold in uh, one of the examples used for one of the definitions. <break#5600418>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -21,7 +21,7 @@
 #: ''Don't slip and '''break''' your leg.''
 #: ''Then his fifth metatarsal '''broke'''.''
 # {{intransitive}} To [[stop]] [[function]]ing [[properly]] or [[altogether]].
-#: ''On the hottest day of the year the '''fridge''' broke.''
+#: ''On the hottest day of the year the fridge '''broke'''.''
 # {{intransitive}} To [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporarily]].
 #: ''Let's '''break''' for lunch.''
 # {{intransitive|tennis}} To win a game as [[receiver]].
