--- a/en/m/metalliferous.801832.wikitext
+++ b/en/m/metalliferous.801832.wikitext
@@ -1,10 +1,51 @@
 ==English==
 
+===Etymology===
+
+{{confix|metalli|ferous}}
+
 ===Adjective===
 {{en-adj}}
 
 # {{metallurgy}} Containing a [[metal]]lic [[element]]. Often used to describe [[ore]]s that are mined commercially.
 #: ''Cassiterite is a '''metalliferous''' ore containing tin.''
+
+====Hyponyms====
+{{top4}}
+*[[aluminiferous]]
+*[[antimoniferous]]
+*[[arseniferous]]
+*[[auriferous]]
+*[[argentiferous]]
+*[[chromiferous]]
+*[[cobaltiferous]]
+*[[cupriferous]]
+{{mid4}}
+*[[ferriferous]]
+*[[germaniferous]]
+*[[magnesiferous]]
+*[[manganiferous]]
+*[[molybdeniferous]]
+*[[nickeliferous]]
+*[[niobiferous]]
+{{mid4}}
+*[[palladiferous]]
+*[[plumbiferous]]
+*[[stanniferous]]
+*[[tantaliferous]]
+*[[telluriferous]]
+*[[titaniferous]]
+*[[tungsteniferous]]
+{{mid4}}
+*[[uraniferous]]
+*[[vanadiferous]]
+*[[yttriferous]]
+*[[zirconiferous]]
+*[[zinciferous]]
+{{bottom}}
+
+====Related terms====
+*[[metallic]]
 
 [[vi:metalliferous]]
 [[zh:metalliferous]]
