--- a/en/b/began.6789.wikitext
+++ b/en/b/began.6789.wikitext
@@ -6,7 +6,7 @@
 * {{IPA|/bI'gæn/}}, {{SAMPA|/bI"g{n/}}
 * {{audio|en-us-began.ogg|Audio (US)}}
 * {{rhymes|æn}}
-* Hyphenation: be&middot;gan
+* {{hyphenation|be|gan}}
 
 ===Verb===
 '''began'''
