--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -23,16 +23,23 @@
 * {{term|specie}} is a separate word, not the singular version of {{term|species}}.
 * {{sense|biology, taxonomy, rank in the classification of organisms}} See {{term|species name}}.
 
+====Derived terms====
+* [[ring species]]
+* [[endangered species]]
+* [[subspecies]]
+
 ====Related terms====
 * [[speciate]]
 * [[speciation]]
-* [[ring species]]
-* [[subspecies]]
-* [[endangered species]]
-
 * [[specie]]
 * [[specific]]
 * [[specious]]
+* [[spectacle]]
+* [[spectacular]]
+* [[speculate]]
+* [[speculation]]
+* [[speculative]]
+* [[speculator]]
 
 ====Translations====
 {{trans-top|rank in a taxonomic classification}}
