/* Translations */ cs <division#5628781>

--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -109,7 +109,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 {{trans-top|large military unit}}
 * [[Afrikaans]]: [[afdeling]]; [[skeiding]]
-* Czech: [[divize]] {{f}}
+* Czech: {{t-|cs|divize|f}}
 * Dutch: [[divisie]] {{f}},
 * Esperanto: [[divizio]]
 * Finnish: {{t-|fi|divisioona}}
@@ -128,6 +128,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 
 {{trans-top|section of a large company}}
 * [[Afrikaans]]: [[afdeling]]
+* Czech: {{t-|cs|divize|f}}
 * Dutch: [[afdeling]] {{f}}, [[divisie]] {{f}}, [[eenheid]] {{f}}
 * Kurdish: {{t-|ku|به‌ش|sc=KUchar}}
 * Romanian: [[divizie]] {{f}}
@@ -139,6 +140,7 @@ From Latin ''[[divisio]]'', noun of process form from perfect passive participle
 {{trans-bottom}}
 
 {{trans-top|biology: taxonomic classification of plants}}
+* Czech: {{t-|cs|oddělení|f}}
 * Finnish: {{t+|fi|kaari}}, {{t-|fi|pääjakso}}
 * Urdu: {{ur-Arab|[[تقسیم]]}} (taqseem) {{f}}
 {{trans-mid}}
