--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -80,7 +80,7 @@ From {{etyl|fro}} ''[[plege]]'' (French: ''[[pleige]]'').
 {{trans-bottom}}
 
 {{trans-top|person who has taken a pledge of allegiance to a fraternity}}
-* Finnish: {{t|fi|jäsen}}
+* Finnish: {{t|fi|kokelas}}
 {{trans-mid}}
 {{trans-bottom}}
 
