--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -41,7 +41,7 @@ From {{etyl|fro}} ''[[plege]]'' (French: ''[[pleige]]'').
 {{en-noun}}
 
 # A solemn promise to do something.
-# A person who has taken a pledge of allegiance to a college [[fraternity]].
+# A person who has taken a pledge of allegiance to a college [[fraternity]], but not yet formally approved.
 # A security to [[guarantee]] [[payment]] of a [[debt]].
 # A [[drinking]] [[toast]].
 # ''(the pledge):'' A promise to [[abstain]] from [[drinking]] [[alcohol]].
