--- a/en/m/macropsy.801851.wikitext
+++ b/en/m/macropsy.801851.wikitext
@@ -3,7 +3,4 @@
 ===Noun===
 {{en-noun|-}}
 
-# A [[disease]] which causes things to seem unusually large.
-
-===Alternative spellings===
-#[[macropsia]]
+# {{pathology}} [[macropsia]]
