--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -17,7 +17,7 @@ Old English ''[[leþer]]''
 # (''plural'': '''leathers''') Leather clothing, often worn by [[motorcycle]] riders.
 # {{baseball}} A good defensive play
 #: ''Jones showed good '''leather''' to snare that [[liner]].''
-
+   Looks really good on Ben Chalmers butt when Andrew looks at it
 ====Translations====
 {{trans-top|material produced by tanning animal skin}}
 * Albanian: [[lëkurë]]
