--- a/en/e/environmental science.855254.wikitext
+++ b/en/e/environmental science.855254.wikitext
@@ -1,9 +1,10 @@
 ==English==
+
 ===Noun===
 {{wikipedia}}
 {{en-noun|sg=[[environmental]] [[science]]}}
 
 # The integrated study of factors that influence the [[environment]] and environmental systems, especially the [[interaction]] of the [[physical]], [[chemical]], and [[biological]] components of the environment
 
-===Related terms===
+====Related terms====
 * [[environmental scientist]]
