--- a/en/b/Brandane.742083.wikitext
+++ b/en/b/Brandane.742083.wikitext
@@ -1,11 +1,16 @@
-[[Category:Move to Wiktionary 2007-09]]
+==English==
 
-A '''Brandane''', also '''Brandini''' is a collective term for the natives of Arran and Bute, now archaic, it is however still in used in the context of the [[Rothesay Brandane F.C.|Rothesay Brandane Amateur Football Club]].
+===Etymology===
+The origin of 'Brandane' may be in the name of [[w:Saint Brendan|Saint Brendan]] or in ''the bold water or spray men''.<
 
-The origin of 'Brandane' may be in the name of Saint Brendan or in ''the bold water or spray men''.<ref name="MacBride">MacBride, MacKenzie (1910). ''Arran of the Bens, the Glens and the Brave''. Pub. Foulis. P. 76 - 80.</ref>
+===Proper noun===
+Brandane
+
+# {{archaic}} Collective name of the natives of Arran and Bute.
+# A family [[surname]].
+
 
 == References ==
-{{reflist}}
+* (etymology) MacBride, MacKenzie (1910). ''Arran of the Bens, the Glens and the Brave''. Pub. Foulis. pp. 76-80.
 
-[[Category:Move to Wiktionary 2007-09]]
-The name " Brandane " is still used on the island of Bute, the name is only given to a person who was actually born on the island, and yes, it is still used by Rothesay Brandane A.F.C.
+[[Category:Surnames]]
