--- a/en/t/tombstoners.719869.wikitext
+++ b/en/t/tombstoners.719869.wikitext
@@ -4,8 +4,4 @@
 ===Noun===
 '''tombstoners'''
 
-# {{plural of|[[tombstoner]]}}
-
-[[Category:English plurals]]
-
-[[ar:tombstoners]]
+Old school Heavily blackened Doomish-Death raw war punx metal from Mexicali, Mexico
