--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -4,8 +4,14 @@
 
 #{{organic compound}} [[polyvinyl chloride]]
 #Premature Ventricular Contraction (of the heart.)
-'''Translations'''
-*[[Dutch]]: PVC
+
+====Translations====
+{{top}}
+*[[Dutch]]: [[#Dutch|PVC]]
+{{bottom}}
+
+====See also====
+* {{sense|chemistry}} [[ABS]]
 
 [[de:PVC]]
 [[fr:PVC]]
