--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -2,8 +2,8 @@
 ==={{initialism}}===
 '''PVC'''
 
-#{{organic compound}} [[polyvinyl chloride]]
-#Premature Ventricular Contraction (of the heart.)
+#{{organic compound}} [[polyvinyl chloride|''p''oly''v''inyl ''c''hloride]]
+#{{medicine}} [[premature ventricular contraction|'''P'''remature '''V'''entricular '''C''ontraction]] of the heart.
 
 ====Translations====
 {{top}}
