--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -3,7 +3,7 @@
 '''PVC'''
 
 #{{organic compound}} [[polyvinyl chloride|''p''oly''v''inyl ''c''hloride]]
-#{{medicine}} [[premature ventricular contraction|'''P'''remature '''V'''entricular '''C''ontraction]] of the heart.
+#{{medicine}} [[premature ventricular contraction|'''P'''remature '''V'''entricular '''C'''ontraction]] of the heart.
 
 ====Translations====
 {{top}}
