--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-From {{etyl|la}} {{term|qua||in the capacity of|lang=la}}.  Term used by pseudo-intellectuals to sound intelligent.
+From {{etyl|la}} {{term|qua||in the capacity of|lang=la}}.
 
 ===Pronunciation===
 * {{IPA|/kwɑː/|/kweɪ/}}
