--- a/en/m/madarosis.801854.wikitext
+++ b/en/m/madarosis.801854.wikitext
@@ -1,5 +1,8 @@
 ==English==
 
+===Etymology===
+From {{etyl|grc|en}} {{term|μαδάρωσις||baldness, especially of the eyelids|tr=madarōsis|lang=grc|sc=polytonic}}
+
 ===Noun===
 {{en-noun|-}}
 
