--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -84,6 +84,7 @@ From {{etyl|la}} ''[[consumere]]''.
 [[hu:consume]]
 [[ja:consume]]
 [[pt:consume]]
+[[simple:consume]]
 [[fi:consume]]
 [[ta:consume]]
 [[te:consume]]
