--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -56,6 +56,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 
 # minimum
 
+[[et:minimum]]
 [[es:minimum]]
 [[fr:minimum]]
 [[io:minimum]]
