--- a/en/m/mooses.720092.wikitext
+++ b/en/m/mooses.720092.wikitext
@@ -2,11 +2,14 @@
 ==English==
 
 ===Noun===
-'''mooses'''
+'''mooses''' {{p}}
 
-# {{dated}} {{rare}} {{plural of|[[moose]]}}
+# {{context|dated|rare}} {{plural of|[[moose]]}}
 #* '''1876,''' Familiar Letters of John Adams and His Wife Abigail Adams: With a Memoir of ... - Page 272, ''by John Adams, Abigail Adams, Charles Francis Adams''
 #*: ... Narraganset pacing mares, '''mooses''', wood-ducks, flying squirrels, red-winged blackbirds, cranberries, and rattlesnakes have all been thought of.
+
+====Usage notes====
+* ''For a discussion of the plural forms of ''[[moose]]'', see the [[moose#Usage notes|usage note at the entry for “moose”]].''
 
 ----
 
