--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -7,8 +7,8 @@
 ===Noun===
 {{en-noun}}
 
-# {{computing}} {{form of|short form|[[microcomputer]]}}
-# {{form of|short form|[[micromanagement]]}}
+# {{computing|dated}} {{form of|short form|[[microcomputer]]}}
+# {{rfv-sense}} {{form of|short form|[[micromanagement]]}}
 
 ----
 
