/* English */ adding adjective <micro#5664637>

--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -4,6 +4,15 @@
 ===Pronunciation===
 * {{a|US}} {{IPA|/ˈmaɪ.kɹoʊ/}}
 
+====Adjective===
+{{en-adj}}
+
+# [[small|Small}}, relatively small; {{non-gloss definition|used to contrast levels of the noun modified}}.
+#: ''At the ''micro'' level he was a good manager. At the more macro level he failed.''
+
+====Antonyms====
+* [[macro]]
+
 ===Noun===
 {{en-noun}}
 
