--- a/en/m/micro.34067.wikitext
+++ b/en/m/micro.34067.wikitext
@@ -8,7 +8,7 @@
 {{en-adj}}
 
 # [[small|Small]], relatively small; {{non-gloss definition|used to contrast levels of the noun modified}}.
-#: ''At the ''micro'' level he was a good manager. At the more macro level he failed.''
+#: ''At the '''micro''' level he was a good manager. At the more macro level he failed.''
 
 ====Antonyms====
 * [[macro]]
