--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -7,7 +7,7 @@
 {{wikipedia}}
 
 ===Etymology===
-{{etyl|ang}} [[īġland]].  The S was added by confusion with French ''[[isle]]'', which is not related but is instead from Latin ''[[insula]]''.  Cognate with German ''[[Aue]]'', "water-meadow", and Latin ''[[aqua]]''.  Compare German ''[[Eiland]]'', Old Norse ''[[eyland]]'', and English ''[[ey]]'' as in [[Anglesey]], [[Bardsey]], [[Ely]].
+{{etyl|ang}} [[īġland]].  The S was added by confusion with French ''[[isle]]'', which is not related but is instead from Latin ''[[insula]]''.  Cognate with German ''[[Aue]]'', "water-meadow", and Latin ''[[aqua]]''.  Compare Dutch ''[[eiland]]'', German ''[[Eiland]]'', Old Norse ''[[eyland]]'', and English ''[[ey]]'' as in [[Anglesey]], [[Bardsey]], [[Ely]].
 
 ===Pronunciation===
 * {{audio|en-us-island.ogg|Audio (US)}}
