--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -77,7 +77,7 @@
 * Norwegian: {{t-|no|igjen}}
 * Persian: {{fa-Arab|[[دگربار]]}}
 * Polish: [[ponownie]], [[jeszcze raz]], [[znowu]]
-* Portuguese: [[outra vez]], [[novemente]]
+* Portuguese: [[de novo]], [[outra vez]], [[novamente]]
 * Romanian: {{t-|ro|iarăşi}}, {{t-|ro|din nou}}
 * Russian: [[опять]] (opját’)
 * Sanskrit: [[पुनः]]
