/* Translations */ <sabre-toothed tiger#5681588>

--- a/en/s/sabre-toothed tiger.801837.wikitext
+++ b/en/s/sabre-toothed tiger.801837.wikitext
@@ -14,6 +14,7 @@
 * Finnish: {{t|fi|sapelihammastiikeri}}
 * German: {{t|de|Säbelzahntiger|m}}
 {{mid}}
+* Portuguese: {{t-|pt|tigre-dente-de-sabre|m}}
 * Spanish: {{t|es|diente de sable|m}}
 {{bottom}}
 
