--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -26,6 +26,7 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 * German: {{t+|de|teilnehmen}}, {{t+|de|besuchen}}
 {{trans-mid}}
 * Hungarian: {{t|hu|eljár}}, {{t+|hu|jár}}
+* Polish: uczęszczać, brać udział
 * Portuguese: [[assistir]], [[participar em]], [[estar presente em]]
 {{trans-bottom}}
 
