--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -45,6 +45,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 {{trans-mid}}
 * Italian: {{t+|it|frazione|f}}
 * Japanese: [[断片]] (dan-pen)
+* Polish: [[ułamek]] {{m}}, [[cząstka]] {{f}}
 * Portuguese: (''Brazil'') [[fração]] {{f}}, (''Portugal'') [[fracção]] {{f}}
 * Russian: {{t+|ru|часть|f|sc=Cyrl}}
 * Spanish: [[fracción]], {{f}}
@@ -61,6 +62,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 {{trans-mid}}
 * Italian: {{t+|it|frazione|f}}
 * Japanese: [[分数]] (bunsū)
+* Polish: [[ułamek]] {{m}}
 * Portuguese: (''Brazil'') [[fração]] {{f}}, (''Portugal'') [[fracção]] {{f}}
 * Russian: {{t|ru|дробь|f|sc=Cyrl}}
 * Slovene: {{t+|sl|ulomek|m}}
