--- a/en/b/Brandane.742083.wikitext
+++ b/en/b/Brandane.742083.wikitext
@@ -7,9 +7,7 @@ The origin of 'Brandane' may be in the name of [[w:Saint Brendan|Saint Brendan]]
 {{en-proper noun}}
 
 # {{archaic}} Collective name of the natives of Arran and Bute.
-# A family [[surname]].
+# {{surname}}
 
 ===References===
 * (etymology) MacBride, MacKenzie (1910). ''Arran of the Bens, the Glens and the Brave''. Pub. Foulis. pp. 76-80.
-
-[[Category:Surnames]]
