--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -58,6 +58,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 
 [[Category:English ergative verbs]]
 [[Category:English irregular verbs]]
+[[Category:Bodily fluids]]
 
 [[ar:bleed]]
 [[el:bleed]]
