--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -99,7 +99,7 @@ From {{etyl|xno}} ''[[esquirel]]'', from {{etyl|fro}} ''[[escurel]]'' (modern {{
 * [[red squirrel]]
 
 ===Verb===
-{{en-verb|squirrel|l|ing}}
+{{en-verb|squirrel|ing}}
 
 # ''with "away":'' To [[hoard]] in a hidden place, by analogy to squirrels' habit of hoarding nuts.
 # ''with "around":'' To move or search erratically, especially as if hurried or confused.
