--- a/en/m/madarosis.801854.wikitext
+++ b/en/m/madarosis.801854.wikitext
@@ -8,6 +8,9 @@ From {{etyl|grc|en}} {{term|μαδάρωσις||baldness, especially of the eyel
 
 # The loss of [[eyebrow]]s or [[eyelash]]es.
 
+====Related terms====
+* [[madarotic]]
+
 [[Category:Hair]]
 
 [[ta:madarosis]]
