expand & cleanup <madarotic#5728430>

--- a/en/m/madarotic.801855.wikitext
+++ b/en/m/madarotic.801855.wikitext
@@ -1,6 +1,19 @@
 ==English==
 
+===Etymology===
+From {{term|madarosis}}, from {{etyl|grc|en}} {{term|μαδάρωσις||baldness, especially of the eyelids|tr=madarōsis|lang=grc|sc=polytonic}}
+
+====Pronunciation====
+* {{a|UK}} {{IPA|/ˌmæd.əˈɹɒt.ɪk/}}
+* {{a|US}} {{IPA|/ˌmæd.əˈɹɑt.ɪk/}}
+* {{audio|en-us-madarotic.ogg|Audio (US)}}
+
 ===Adjective===
 {{en-adj|-}}
 
-# Of or pertaining to ''[[madarosis]]''.
+# Of or pertaining to the loss of [[eyebrow]]s or [[eyelash]]es.
+
+====Related terms====
+* [[madarosis]]
+
+[[Category:Hair]]
