--- a/en/m/madarotic.801855.wikitext
+++ b/en/m/madarotic.801855.wikitext
@@ -4,6 +4,7 @@
 From {{term|madarosis}}, from {{etyl|grc|en}} {{term|μαδάρωσις||baldness, especially of the eyelids|tr=madarōsis|lang=grc|sc=polytonic}}
 
 ====Pronunciation====
+{{rfc-level|Pronunciation at L4+ not in L3 POS section|lang=en}}
 * {{a|UK}} {{IPA|/ˌmæd.əˈɹɒt.ɪk/}}
 * {{a|US}} {{IPA|/ˌmæd.əˈɹɑt.ɪk/}}
 * {{audio|en-us-madarotic.ogg|Audio (US)}}
