--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -17,8 +17,8 @@
 # {{context|biology|taxonomy}} A [[rank]] in the classification of [[organism]]s, below [[genus]] and above [[subspecies]]; a [[taxon]] at that rank
 #* Darwin, ''On the Origin of '''Species''''':
 #*: ''Hence, in determining whether a form should be ranked as a '''species''' or a variety, the opinion of naturalists having sound judgment and wide experience seems the only guide to follow.''
+# {{mineralogy}} A [[mineral]] with a unique chemical formula whose [[crystals]] belong to a unique crystallographic system.
 # {{chemistry}} A specific known or unknown [[element]], [[molecule]], [[radical]] or [[ion]]; used commonly when the [[entity]]'s status as an element, molecule etc. is unknown.
-# {{mineralogy}} A [[mineral]] with a unique chemical formula whose crystals belong to a unique crystallographic system.
 
 ====Usage notes====
 * {{term|specie}} is a separate word, not the singular version of {{term|species}}.
