/* Translations */ Danish, add gender <badger#5734039>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -31,7 +31,7 @@
 * Cherokee: [[ᎤᎫᎾ]] (uguna)
 * Croatian: [[jazavac]] {{m}}
 * Czech: [[jezevec]] {{m}}
-* Danish: [[grævling]] {{g|Danish}}
+* Danish: {{t-|da|grævling|c}}
 * Dutch: [[das]] {{m}}
 * Esperanto: [[melo]]
 * Estonian: [[mäger]], [[määr]]
