--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -20,24 +20,24 @@
 * Arabic: {{Arab|[[افسد]]}} (’áfsada), {{Arab|[[فسد]]}} (fásada)
 * {{trreq|Basque}}
 * Chinese: [[腐化]] (fǔhuà)
-* Danish: [[rådne]]
+* Danish: {{t|da|rådne}}
 * Dutch: {{t-|nl|rotten}}, {{t-|nl|vergaan}}
 * Finnish: {{t+|fi|mädäntyä}}
 * French: {{t+|fr|pourrir}}
-* Georgian: [[ლპობა]] (lpoba), [[დალპობა]] (dalpoba), [[ჩალპობა]] (čalpoba), [[ხრწნა]] (xrts‘na)
-* German: [[verrotten]], [[verderben]]
-* Greek: {{t|el|σαπίζω|sc=Grek}} (sapízo)
+* Georgian: {{t|ka|ლპობა|tr=lpoba}}, {{t|ka|დალპობა|tr=dalpoba}}, {{t|ka|ჩალპობა|tr=čalpoba}}, {{t|ka|ხრწნა|tr=xrts‘na}}
+* German: {{t|de|verrotten}}, {{t|de|verderben}}
+* Greek: {{t|el|σαπίζω|sc=Grek|tr=sapízo}}
 * Italian: {{t+|it|marcire}}
 {{mid}}
 * Japanese: [[腐る]] ([[くさる]], [[kusaru]])
 * Korean: [[썩다]] (sseokda), [[부패하아]] (bupaehada)
 * Latin: [[putesco#Latin|pūtesco]], [[tabesco#Latin|tābesco]]
-* Russian: [[гнить]] (gnit’)
-* Romanian: [[putrezi]], [[descompune]]
-* Spanish: [[pudrir]], [[podrir]]
-* Swedish: [[ruttna]]
-* Turkish: [[çürümek]]
-* Portuguese: [[putrefazer]]
+* Portuguese: {{t|pt|putrefazer}}
+* Romanian: {{t|ro|putrezi}}, {{t|ro|descompune}}
+* Russian: {{t|ru|гнить|tr=gnit’}}
+* Spanish: {{t|es|pudrir}}, {{t|es|podrir}}
+* Swedish: {{t|sv|ruttna}}
+* Turkish: {{t|tr|çürümek}}
 {{bottom}}
 
 ===Noun===
