/* Noun */ ed <rot#5734578>

--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -43,9 +43,9 @@
 ===Noun===
 {{en-noun}}
 
-# the process of becoming [[rotten]]; [[putrefaction]]
-# any of several [[disease]]s in which [[breakdown]] of [[tissue]] occurs
-# [[logorrhoea]]; verbal [[nonsense]]
+# The process of becoming [[rotten]]; [[putrefaction]].
+# Any of several [[disease]]s in which [[breakdown]] of [[tissue]] occurs.
+# Verbal [[nonsense]].
 
 [[Category:English intransitive verbs]]
 
