--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -174,6 +174,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 {{trans-top|a legislative or judicial assembly}}
 * German: {{t-|de|Thing|n}}
 {{trans-mid}}
+* Norwegian: {{t|no|ting|n}}
 * Swedish: {{t+|sv|ting|n}}
 {{trans-bottom}}
 
