--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -257,6 +257,13 @@
 [[Category:Norwegian conjunctions]]
 
 ----
+==Scottish Gaelic==
+===Verb===
+{{infl|gd|verb}}, (''present participle'') '''at'''
+
+* To [[swell]], [[fester]], [[puff up]].
+
+----
 
 ==Tagalog==
 
