/* Verb */ fix <at#5738120>

--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -263,9 +263,7 @@
 ===Verb===
 {{infl|gd|verb}}, (''present participle'') '''at'''
 
-* To [[swell]], [[fester]], [[puff up]].
-
-# {{defn|Scottish Gaelic}}
+# To [[swell]], [[fester]], [[puff up]].
 
 ----
 
