/* English */ caps in non-template header <GMA pallets#5740182>

--- a/en/g/GMA pallets.719872.wikitext
+++ b/en/g/GMA pallets.719872.wikitext
@@ -2,10 +2,8 @@
 ==English==
 
 ===Noun===
-'''gma pallets'''
+'''GMA pallets'''
 
-# {{plural of|[[gma pallet]]}}
+# {{plural of|[[GMA pallet]]}}
 
 [[Category:English plurals]]
-
-[[ar:gma pallets]]
