--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -107,6 +107,7 @@
 * [[colony]]
 * [[Appendix: Collective nouns]]
 
+[[Category:Mammals]]
 ====Verb====
 '''badger'''
 {{en-verb|badgers|badgering|badgered}}
