header Derived terms to L5 <badger#5749343>

--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -19,13 +19,13 @@
 # A native or resident of the American State of [[Wisconsin]].
 # {{context|plural|vulgar|cant}} A crew of desperate villains who robbed near rivers, into which they threw the bodies of those they murdered.
 
-====Derived terms====
-*[[American badger]]
-*[[European badger]]
-*[[ferret-badger]]
-*[[hog badger]]
-*[[honey badger]]
-*[[stink badger]]
+=====Derived terms=====
+* [[American badger]]
+* [[European badger]]
+* [[ferret-badger]]
+* [[hog badger]]
+* [[honey badger]]
+* [[stink badger]]
 
 =====Translations=====
 {{trans-top|animal}}
@@ -107,7 +107,6 @@
 * [[colony]]
 * [[Appendix: Collective nouns]]
 
-[[Category:Mammals]]
 ====Verb====
 '''badger'''
 {{en-verb|badgers|badgering|badgered}}
@@ -132,6 +131,8 @@
 {{en-noun}}
 
 # A person who makes badges.
+
+[[Category:Mammals]]
 
 [[bg:badger]]
 [[de:badger]]
