--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -15,6 +15,9 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 # {{chemistry}} a [[component]] of a [[mixture]], separated by [[fractionation]].
 # In a [[Eucharistic]] [[service]], the breaking of the [[Host]].
 
+===Quotations===
+{{seeCites}}
+
 ====Derived terms====
 {{top2}}
 * [[common fraction]]
