--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -15,6 +15,7 @@ Literally "beyond the river Dniester".
 ====Translations====
 {{trans-top|Transnistria, an autonomous territory in Moldova}}
 * [[Asturian]]: {{t-|ast|Transnistria|f|xs=Asturian}}
+* Armenian: {{t|hy|Մերձդնեստր|sc=Armn|tr=Merjdnestr|xs=Armenian}}
 * [[Basque]]: {{t-|eu|Transnistria|xs=Basque}}
 * Belarusian: {{t|be|Прыднястроўе|sc=Cyrl|xs=Belarusian}}
 * Bosnian: {{t|bs|Pridnjestrovska Moldavska Republika|f}}
