--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -5,6 +5,13 @@
 ===Adjective===
 {{es-adj|f=estadounidense|pl=estadounidenses}}
 # of the [[United States]] of America
+==Portuguese==
+===Noun===
+{{es-noun-mf|f=estadounidense|pl=estadounidenses}}
+# citizen of the [[United States]] of America.
+===Adjective===
+{{es-adj|f=estadounidense|pl=estadounidenses}}
+# of the [[United States]] of America
 ===See also===
 *[[yanqui]]
 *[[gringo]]
