--- a/en/m/madarosis.801854.wikitext
+++ b/en/m/madarosis.801854.wikitext
@@ -6,7 +6,7 @@ From {{etyl|grc|en}} {{term|μαδάρωσις||baldness, especially of the eyel
 ===Noun===
 {{en-noun|-}}
 
-# The loss of [[eyebrow]]s or [[eyelash]]es.
+# {{medicine}} The loss of [[eyebrow]]s or [[eyelash]]es.
 
 ====Related terms====
 * [[madarotic]]
