--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -47,6 +47,7 @@ Old English ''[[þonne]]''
 {{trans-mid}}
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
 * Malay: [[pada masa yang sama]]
+* Norwegian: {{t|no|da}}, {{t|no|den gang}}
 * Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
 * Polish: [[wówczas]], [[wtedy]]
 * Portuguese: [[então]], [[naquele]] [[tempo]], [[naquela]] [[época]], [[nesse tempo]], [[nessa]] [[época]]
@@ -70,6 +71,7 @@ Old English ''[[þonne]]''
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 {{trans-mid}}
 * Malay: [[tidak lama kemudian]]
+* Norwegian: {{t|no|så}}, {{t|no|deretter}}, {{t|no|siden}}
 * Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
 * Polish: (a) [[następnie]], (a) [[potem]]
 * Portuguese: [[depois]], [[em seguida]]
@@ -94,6 +96,7 @@ Old English ''[[þonne]]''
 * Kurdish: [[paşî]], [[dûre]], [[piştre]], [[dûvre]], [[peyre]]
 {{trans-mid}}
 * Malay: [[selepas itu]]
+* Norwegian: {{t|no|så}}, {{t|no|deretter}}
 * Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
 * Polish: (a) [[następnie]], (a) [[potem]]
 * Portuguese: [[seguidamente]], [[sequencialmente]]
@@ -119,6 +122,7 @@ Old English ''[[þonne]]''
 {{trans-mid}}
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
 * Malay: [[oleh sebab yang demikian]]
+* Norwegian: {{t|no|da}}, {{t|no|i så fall}}
 * Old English: {{t-|ang|þa|alt=þā|xs=Old English}}
 * Polish: [[to]], [[wówczas]]
 * Portuguese: [[então]], [[nesse]] [[caso]]
@@ -136,6 +140,7 @@ Old English ''[[þonne]]''
 * Kurdish: li [[mil|milê]] din, [[li]] [[alî]] [[dî]]
 * Lithuanian: {{t-|lt|tada|xs=Lithuanian}}
 {{trans-mid}}
+* Norwegian: {{t|no|da}}
 * Polish: {{t+|pl|również}}, {{t+|pl|także}}
 * Portuguese: [[ao mesmo tempo]], [[simultaneamente]]; [[entretanto]]
 * Russian: {{t+|ru|тогда|tr=togdá|sc=Cyrl}}
