--- a/en/w/weasel.8232.wikitext
+++ b/en/w/weasel.8232.wikitext
@@ -22,6 +22,7 @@ The word ''weasel'' is the direct descendant of {{etyl|ang}} ''[[weosule]]'', a 
 
 ====Translations====
 {{trans-top|Mustela nivalis}}
+* Armenian: {{t|hy|աքիս|sc=Armn|tr=ak'is}}
 * [[Breton]]: {{t+|br|kaerell|xs=Breton}}
 * Chinese: {{t+|cmn|黄鼠狼|sc=Hani|xs=Mandarin}} (huángshǔláng)
 * Czech: {{t-|cs|lasice|f}}
