/* Derived terms */ + [[break one's fast]]; made section collapsible <break#5848971>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -77,7 +77,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * {{intransitive|tennis: break serve}} [[hold]]
 
 ====Derived terms====
-{{top3}}
+{{rel-top3|Terms derived from the verb "break"}}
 * [[breakage]]
 * [[break a leg]]
 * [[break apart]]
@@ -87,16 +87,17 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * [[breaker]]
 * [[break even]]
 * [[break in]]
-{{mid3}}
+{{rel-mid3}}
 * [[break into]]
 * [[break new ground]]
 * [[break off]]
+* [[break one's fast]]
 * [[break open]]
 * [[break out]]<!--phrasal verb-->
 <!--the noun "break-out" is derived from the verb "break out"-->
 * [[break ranks]]
-{{mid3}}
 * [[break someone's heart]]
+{{rel-mid3}}
 * [[break stride]]
 * [[break the ice]]
 * [[break through]]<!--phrasal verb-->
@@ -105,7 +106,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 <!--the noun "break-up" is derived from the verb "break up"-->
 * [[break wind]]
 * [[make-or-break]]
-{{bottom3}}
+{{rel-bottom}}
 
 ====See also====
 * [[breaking]]
