--- a/en/s/save up.746191.wikitext
+++ b/en/s/save up.746191.wikitext
@@ -3,7 +3,7 @@
 ===Verb===
 {{en-verb|inf=[[save]] [[up]]|saves up|saving up|saved up}}
 
-# {{context|transitive|and|intransitive}} To [[accumulate]] [[money]], especially for a [[specific]], [[planned]] [[expenditure]].
+# {{transitive|and|intransitive}} To [[accumulate]] [[money]], especially for a [[specific]], [[planned]] [[expenditure]].
 #:''I'm '''saving up''' my tips for a new guitar.''
 #:''She knows she must '''save up''' for college.''
 
