Polish translation added <staff#5894563>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -47,9 +47,10 @@
 * Dutch: [[balk]] {{m}}, [[notenbalk]] {{m}}
 * Finnish: {{t-|fi|nuottiviivasto}}
 * French: {{t+|fr|portée|f}}
-{{trans-mid}}
 * German: [[Notenlinien]] {{f|p}}
+{{trans-mid}}
 * Italian: {{t+|it|pentagramma|m}}
+* Polish: {{t|pl|pięciolinia|f}}
 * Portuguese: {{t+|pt|pauta|f}}
 * Spanish: {{t-|es|varas|f|p}}
 {{trans-bottom}}
@@ -60,8 +61,9 @@
 * Finnish: {{t-|fi|henkilökunta}}
 * French: {{t+|fr|personnel|m}}, {{t+|fr|staff|m}}
 * German: [[Belegschaft]] {{f}}, [[Personal]] {{n}}
-{{trans-mid}}
 * Italian: {{t+|it|personale|m}}
+{{trans-mid}}
+* Polish: {{t|pl|personel|m}}
 * Portuguese: {{t+|pt|pessoal|m}}
 * Russian: {{t+|ru|персонал|m}}
 * Spanish: {{t-|es|personal|m}}
