--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -32,6 +32,7 @@ Partly imitative, also influenced by {{term|burble}}.
 {{trans-mid}}
 * Kurdish: {{t|ku|بڵق|sc=KUchar}}
 * Latin: {{t-|la|bulla|f}}
+* Latvian: [[burbuļi]] {{m}}
 * Portuguese: {{t-|pt|bolha|f}}
 * Russian: {{tr|ru|пузырь|m|sc=Cyrl|tr=puzýr'}}
 * Spanish: {{t+|es|burbuja|f}}, {{t-|es|pompa|f}} {{qualifier|soap bubble}}
