/* Translations */ ja <bubble#5908784>

--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -23,18 +23,20 @@ Partly imitative, also influenced by {{term|burble}}.
 ====Translations====
 {{trans-top|spherically contained volume of air}}
 * Armenian: {{t|hy|պղպջակ|tr=pġpǰak|sc=Hayeren|xs=Armenian}}
+* Chinese Characters: [[泡]]
 * Czech: {{t-|cs|bublina|f}}
 * Finnish: {{t-|fi|kupla}}
 * French: {{t+|fr|bulle|f}}
 * German: {{t+|de|Blase|f}}
 * Hebrew: {{t+|he|בועה|f|tr=bu'a|sc=Hebr}}
 * Hungarian: {{t+|hu|buborék}}
+* Japanese: [[泡]] (あわ, awa)
 {{trans-mid}}
 * Kurdish: {{t|ku|بڵق|sc=KUchar}}
 * Latin: {{t-|la|bulla|f}}
 * Latvian: [[burbuļi]] {{m}}
 * Portuguese: {{t-|pt|bolha|f}}
-* Russian: {{tr|ru|пузырь|m|sc=Cyrl|tr=puzýr'}}
+* Russian: {{t|ru|пузырь|m|sc=Cyrl|tr=puzýr'}}
 * Spanish: {{t+|es|burbuja|f}}, {{t-|es|pompa|f}} {{qualifier|soap bubble}}
 * Swedish: {{t-|sv|bubbla|c}}, {{t|sv|såpbubblor}} {{qualifier|soap bubble}}
 * [[Telugu]]: {{t|te|బుడగ|tr=buDaga|sc=Telu}}
