--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -36,7 +36,7 @@
 * Albanian: [[zardafi]]
 * Armenian: {{t|hy|կզաքիս|sc=Armn|tr=kzak'is}}
 * [[Basque]]: [[lepahori]]
-* Belarusian: {{tr|be|куніца|tr=kunitsa|f}}
+* Belarusian: {{t|be|куніца|tr=kunitsa|f}}
 * Bosnian: {{t-|bs|kuna|f}}
 * [[Breton]]: [[mart]]
 * Bulgarian: {{t-|bg|куна|f|tr=kuna|sc=Cyrl}}
@@ -53,6 +53,7 @@
 * [[Friulian]]: [[mardar]], [[martar]]
 * [[Galician]]: [[marta]]
 * German: {{t+|de|Marder|m}}
+* Georgian: {{t|ka|კვერნა|tr=kverna}}
 * Greek: [[δενδροκούναβο]] (dendrokúnavo)
 * Hungarian: [[nyuszt]], [[nyest]]
 * Icelandic: {{t+|is|mörður}}
