--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -10,6 +10,7 @@
 
 # a small [[change]]; a minor [[correction]]; a [[modification]]
 #: ''The credit card company made an '''adjustment''' to my account to waive the late fee.''
+# {{psychology)) The behavioural process of balancing conflicting needs, or needs against obstacles in the environment. 
 
 ====Synonyms====
 * [[change]]
