--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -37,6 +37,7 @@
 =====Translations=====
 {{trans-top|grinding apparatus or the building housing it}}
 * Arabic: {{Arab|[[مطحنة]]}} {{IPAchar|(máʈħana)}} {{f}}
+* Armenian: {{t|hy|աղաց|sc=Armn|tr=aġac'}}, {{t|hy|ջրաղաց|sc=Armn|tr=ǰraġac'}}
 * Bosnian: {{t-|bs|mlin|m}}
 * Croatian: {{t-|hr|mlin|m}}
 * Czech: {{t+|cs|mlýn|m}}
@@ -69,6 +70,7 @@
 {{trans-bottom}}
 
 {{trans-top|manufacturing plant}}
+* Armenian: {{t|hy|գործարան|sc=Armn|tr=gorçaran}}
 * Dutch: [[fabriek]] {{f}} (''general''), [[papierfabriek]] {{f}} (''for paper''), [[staalfabriek]] (''for steel''), [[textielfabriek]] (''for textiles'')
 * Finnish: {{t+|fi|tehdas}}
 * French: {{t+|fr|manufacture|f}}
