--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -14,6 +14,7 @@
 ====Translations====
 {{trans-top|''Sus scrofa''}}
 * Albanian: [[derri i egër]]
+* Armenian: {{t|hy|վայրի խոզ|sc=Armn|tr=vayri xoz}}, {{t|hy|վարազ|sc=Armn|tr=varaz}}
 * [[Basque]]: [[basurde]]
 * Belarusian: [[кабан]], [[дзік]]
 * [[Breton]]: [[hoc’h gouez]]
@@ -54,7 +55,7 @@
 * Romanian: [[mistreţ]]
 * [[Romansch]]: [[portg selvadi]]
 * [[Romany]]: [[divlio-balo]] {{m}}
-* Russian: [[кабан]] ([[kaban]]) '' ''
+* Russian: {{t+|ru|кабан|m|tr=kabán|sc=Cyrl}}, {{t-|ru|вепрь|m|tr=vépr'|sc=Cyrl}}
 * [[Sami]]: [[meahccespiidni]]
 * [[Sardinian (northern)]]: [[sirbone]], [[porcrabu]] {{m}}
 * [[Sardinian (southern)]]: [[sriboni]], [[mardi de sirba]]
