trans unlink Slovene <wild boar#5943490>

--- a/en/w/wild boar.8245.wikitext
+++ b/en/w/wild boar.8245.wikitext
@@ -62,7 +62,7 @@
 * [[Scottish]]: [[torc]]
 * Serbian: [[дивљa свиња]] ([[divlja svinja]])
 * Slovak: [[diviak]] {{m}}, [[kanec]] {{m}}, [[diviak lesný]]
-* [[Slovene]]: [[divji prašič]]
+* Slovene: [[divji prašič]]
 * Spanish: {{t-|es|jabalí|m}}
 * Swedish: {{t+|sv|vildsvin}}
 * Turkish: {{t+|tr|yaban domuzu}}
