--- a/en/z/Zacharias.855854.wikitext
+++ b/en/z/Zacharias.855854.wikitext
@@ -7,7 +7,7 @@ From the New Testament Greek form of Old Testament [[Zachariah]] and [[Zechariah
 {{en-proper noun}}
 
 # {{biblical character}} The father of [[John the Baptist]].
-# {{given name|male}}.
+# {{given name|male|from=Hebrew}}.
 
 ====Translations====
 {{trans-top|father of John the Baptist}}
