/* Noun */ Finnish translations, synonym <whistler#5944509>

--- a/en/w/whistler.7356.wikitext
+++ b/en/w/whistler.7356.wikitext
@@ -2,10 +2,32 @@
 ===Noun===
 {{wikipedia|Whistler}}
 {{en-noun}}
-# someone or something that [[whistle]]s
-# the [[whistling marmot]]
-# the [[goldeneye]]
-#{{physics}} an [[audio]]-[[frequency]] [[electromagnetic wave]] produced by [[atmospheric]] [[disturbance]]s such as [[lightning]]
+
+# Someone or something that [[whistle]]s.
+# A [[whistling marmot]].
+# A [[goldeneye]].
+# {{physics}} An [[audio]]-[[frequency]] [[electromagnetic wave]] produced by [[atmospheric]] [[disturbance]]s such as [[lightning]].
+
+====Synonyms====
+* {{sense|whistling marmot}} [[hoary marmot]]
+
+====Translations====
+{{trans-top|someone or something that whistles}}
+* Finnish: {{t|fi|viheltäjä}} (''man or animal''), {{t|fi|vihellin}} (''device'')
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-see|whistling marmot|hoary marmot}}
+
+{{trans-top|goldeneye}}
+* Finnish: {{t|fi|telkkä}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|physics: audio-frequency electromagnetic wave}}
+* Finnish: [[matalataajuinen]] {{t|fi|radioaalto}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[Category:English agent nouns]]
 
