/* English */ derived terms (species of marmot) <marmot#5944620>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -1,6 +1,6 @@
+{{wikipedia}}
 ==English==
 [[Image:Hoary marmot.jpg|thumb|''Marmota caligata'']]
-{{wikipedia}}
 
 ===Etymology===
 {{etyl|fr}} [[marmotte]], {{etyl|it}} [[marmotta]], [[marmotto]], of uncertain etymology.
@@ -13,11 +13,22 @@
 ===Noun===
 {{en-noun}}
 
-# any of several large ground-dwelling [[rodent]]s of the [[genera]] ''[[Marmota]]'' and ''[[Cynomys]]'' in the [[squirrel]] family.
+# Any of several large ground-dwelling [[rodent]]s of the [[genera]] ''[[Marmota]]'' and ''[[Cynomys]]'' in the [[squirrel]] family.
 
-====Synonyms====
-* [[groundhog]]
-* [[woodchuck]]
+====Derived terms====
+* [[Alaska marmot]]
+* [[alpine marmot]]
+* [[black-capped marmot]]
+* [[bobak marmot]]
+* [[gray marmot]]
+* [[Himalayan marmot]]
+* [[hoary marmot]]
+* [[long-tailed marmot]]
+* [[Menzbier's marmot]]
+* [[olympic marmot]]
+* [[tarbagan marmot]]
+* [[Vancouver marmot]]
+* [[yellow-bellied marmot]]
 
 ====Translations====
 {{top}}
@@ -34,9 +45,9 @@
 * Danish: [[murmeldyr]]
 * Dutch: {{t+|nl|marmot}}
 * Esperanto: [[marmoto]]
-* Estonian: [[ümiseja]]
+* Estonian: {{t|et|ümiseja}}
 * Faroese: [[múrmildýr]]
-* Finnish: [[murmeli]]
+* Finnish: {{t|fi|murmeli}}
 * French: {{t+|fr|marmotte|f}}
 * [[West Frisian]]: [[bargemot]], marmot
 * [[Friulian]]: [[marmote]]
@@ -77,6 +88,10 @@
 * Welsh: [[twrlla]], marmot
 {{bottom}}
 {{commons|Marmota}}
+
+====See also====
+* [[groundhog]]
+* [[woodchuck]]
 
 [[Category:Rodents]]
 
