--- a/en/c/celestial object.855631.wikitext
+++ b/en/c/celestial object.855631.wikitext
@@ -9,4 +9,7 @@
 #*'''2000''', John Raymond Winks Jr., "Natal zodiac chart," US Patent 6,015,295, abstract,
 #*:A symbol for each desired '''celestial object''', such as for each planet, the sun, and the moon are included along with a method for detachably attaching each of the symbols to the zodiac chart.
 
+====Synonyms====
+* [[celestial body]]
+
 [[ta:celestial object]]
