--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -79,6 +79,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 [[fi:bleed]]
 [[ta:bleed]]
 [[te:bleed]]
+[[th:bleed]]
 [[vi:bleed]]
 [[uk:bleed]]
 [[zh:bleed]]
