--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -277,6 +277,7 @@ From {{etyl|ang}} {{term|blawan||make an air current, sound a wind instrument|la
 [[fi:blow]]
 [[ta:blow]]
 [[te:blow]]
+[[th:blow]]
 [[vi:blow]]
 [[tr:blow]]
 [[uk:blow]]
