--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -45,6 +45,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * Czech: {{t-|cs|zlomek|m}}
 * Finnish: {{t-|fi|murto-osa}}
 * French: {{t+|fr|fraction|f}}
+* Irish: {{t|ga|codán|m}}
 * Italian: {{t+|it|frazione|f}}
 {{trans-mid}}
 * Japanese: [[断片]] (dan-pen)
@@ -54,7 +55,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * Spanish: [[fracción]], {{f}}
 {{trans-bottom}}
 
-{{trans-top|in arithmetic}}
+{{trans-top|{{arithmetic}} ratio of integers}}
 * Armenian: [[կոտորակ]] (kotorak)
 * [[Catalan]]: [[fracció]], {{f}}
 * Croatian: {{t-|hr|razlomak|m|alt=rázlomak}}
@@ -62,6 +63,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * Dutch: {{t+|nl|breuk|c}}
 * Finnish: {{t+|fi|murtoluku}}
 * French: {{t+|fr|fraction|f}}
+* Irish: {{t|ga|codán|m}}
 {{trans-mid}}
 * Italian: {{t+|it|frazione|f}}
 * Japanese: [[分数]] (bunsū)
@@ -72,15 +74,7 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 * Spanish: [[fracción]], {{f}}, [[quebrado]] {{m}}
 {{trans-bottom}}
 
-<!--rfv-sense
-{{trans-top|part of a particular society or group}}
-{{trans-mid}}
-{{trans-bottom}}
-
--->
-
 {{checktrans-top}}
-* {{ttbc|Irish}}: [[codán]]
 * {{ttbc|Latin}}: [[fractio]]
 {{trans-bottom}}
 
