/* Quotations */ -RFC <fraction#5953429>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -15,11 +15,10 @@ From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], f
 # {{chemistry}} a [[component]] of a [[mixture]], separated by [[fractionation]].
 # In a [[Eucharistic]] [[service]], the breaking of the [[Host]].
 
-===Quotations===
+====Quotations====
 {{seeCites}}
 
 ====Derived terms====
-{{rfc-level|Derived terms at L4+ not in L3 POS section|lang=en}}
 {{top2}}
 * [[common fraction]]
 * [[decimal fraction]]
