--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -9,9 +9,9 @@
 ===Noun===
 {{en-noun}}
 
-# A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner &nbsp; the one who correctly forecast the outcome of an event.
+# A [[wager]], an agreement between two parties that a stake (usually money) will be paid by the loser to the winner (the winner being the one who correctly forecast the outcome of an event).
 # A degree of [[certainty]].
-#: ''It’s a good '''bet''' that it will rain tomorrow.''
+#: ''It’s a safe '''bet''' that it will rain tomorrow.''
 #: ''It’s an even '''bet''' that Jim will come top of the maths test tomorrow''
 
 ====Translations====
