Reverted edits by [[Special:Contributions/74.209.3.70|74.209.3.70]] ([[User_talk:74.209.3.70|Talk]]); changed back to last version by [[User:334a|334a]] <pig#5958159>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -1,9 +1,8 @@
 {{wikipedia}}
 ==English==
 
-===Pronunciation===Ahem..   PIG!!!  Duhuk!  P  I  G  Spells PIG!!!
-{anyone who did not know how to pronounce pig (exepting forign people) is RETARDED!!!}
-* {{IPA|/pɪg/}})
+===Pronunciation===
+* {{IPA|/pɪg/}}
 * {{audio|en-us-pig.ogg|Audio (US)}}
 * {{rhymes|ɪɡ}}
 
