--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -10,12 +10,9 @@ From {{etyl|fro}} {{term|atendre}} < {{etyl|la}} {{term|attendere||to stretch to
 ===Verb===
 {{en-verb}}
 
-# To be at an [[event]].
+# {{transitive}} To be at an [[event]].
 #: ''Failing to '''attend''' the meeting nearly cost her her job.''
-# To [[pay attention]] to; to [[commit]] oneself to; to give [[thought]] and [[care]] to.
-
-====Derived terms====
-* [[attend to]]
+# {{intransitive|_|construed with '''to'''}} To [[pay attention]] to; to [[commit]] oneself to; to give [[thought]] and [[care]] to.
 
 ====Related terms====
 * [[attention]]
