--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -24,35 +24,35 @@
 
 ====Translations====
 {{trans-top|small change}}
-* Arabic: [[]]
-* [[Basque]]: [[]]
-* [[Catalan]]: [[]]
+* {{trreq|Arabic}}
+* {{trreq|Basque}}
+* {{trreq|Catalan}}
 * Danish: [[justering]] {{c}}, [[tilpasning]] {{c}}
 * Dutch: [[aanpassing]] {{f}}, [[bijregeling]] {{f}}
-* Esperanto: [[]]
+* {{trreq|Esperanto}}
 * Finnish: [[säätö]], [[hienosäätö]]
 * French: [[ajustement]] {{m}}, [[arèglement]] {{m}}
 * German: [[Anpassung]] {{f}}
 * Greek: [[διευθέτηση]] (diefthetisi) {{f}}, [[ρύθμιση]] (rithmisi) {{f}}, [[προσαρμογή]] (prosarmogí) {{f}}, [[διαβάθμηση]] (diaváthmisi) {{f}}
-* [[Guarani]]: [[]]
+* {{trreq|Guarani}}
 * Hebrew: [[כִּוּוּן]] {{m}}
-* Hungarian: [[]]
+* {{trreq|Hungarian}}
 * [[Interlingua]]: [[adjustamento]]
 {{trans-mid}}
 * Italian: [[adattamento]] {{m}}, [[inserimento]] {{m}}
 * Japanese: [[調整]] (chōsei); [[調節]] (chōsetsu)
-* Korean: [[]]
-* Latin: [[]]
+* {{trreq|Korean}}
+* {{trreq|Latin}}
 * Polish: [[ustawienie]] {{n}}, [[regulacja]] {{f}}
 * Portuguese: [[ajustamento]] {{m}}, [[ajuste]] {{m}}
-* Russian: [[]]
+* {{trreq|Russian}}
 * Slovene: [[popravek]] {{m}}
 * Spanish: [[ajuste]] ''''
 * Swedish: [[justering]] {{c}}
 * [[Telugu]]: [[సర్దుబాటు]]
-* [[Tupinambá]]: [[]]
-* Turkish: [[]]
-* Welsh: [[]]
+* {{trreq|Tupinambá}}
+* {{trreq|Turkish}}
+* {{trreq|Welsh}}
 {{trans-bottom}}
 
 [[Category:1000 English basic words]]
