/* Translations */ trreq <Camelus dromedarius#5962616>

--- a/en/c/Camelus dromedarius.34060.wikitext
+++ b/en/c/Camelus dromedarius.34060.wikitext
@@ -36,7 +36,7 @@
 *[[Ladin]]: [[camel]]
 *Latvian: [[kamielis]]
 *Lithuanian: [[kupranugaris]]
-*[[Lower Sorbian]]: [[]]
+* {{trreq|Lower Sorbian}}
 *[[Macedonian]]: [[камила]] ([[kamila]])
 *Maltese: [[ġemel]]
 *Norwegian: [[kamel]]
