--- a/en/c/Camelus dromedarius.34060.wikitext
+++ b/en/c/Camelus dromedarius.34060.wikitext
@@ -8,60 +8,60 @@
 
 ====Translations====
 {{top}}
-*Albanian: [[gamilja]]
-*Bulgarian: [[камила]] ([[kamila]])
-*[[Catalan]]: [[camell]]
-*Croatian: [[deva]]
-*Czech: [[velbloud]]
-*Danish: [[kamel]]
-*Dutch: [[kameel]] {{m}}
-*[[English]]: [[camel]]
-*Esperanto: [[kamelo]]
-*Estonian: [[kaamel]]
-*Faroese: [[kamelur]]
-*Finnish: [[kameli]]
-*French: [[chameau]] {{m}}
-*[[West Frisian]]: [[kamiel]]
-*[[Friulian]]: [[camęl]]
-*[[Gallegan]]: [[camelo]]
-*German: [[Kamel]] {{n}}
-*Greek: [[καμήλα]] '' ''
-*Hungarian: [[teve]]
-*Icelandic: [[úlfaldi]]
-*Indonesian: [[]]
-*Irish: [[camall]]
-*Italian: [[cammello]] {{m}}
-*Japanese: [[駱駝]] ([[ラクダ]], rakuda)
+* Albanian: [[gamilja]]
+* Bulgarian: [[камила]] ([[kamila]])
+* [[Catalan]]: [[camell]]
+* Croatian: [[deva]]
+* Czech: [[velbloud]]
+* Danish: [[kamel]]
+* Dutch: [[kameel]] {{m}}
+* [[English]]: [[camel]]
+* Esperanto: [[kamelo]]
+* Estonian: [[kaamel]]
+* Faroese: [[kamelur]]
+* Finnish: [[kameli]]
+* French: [[chameau]] {{m}}
+* [[West Frisian]]: [[kamiel]]
+* [[Friulian]]: [[camęl]]
+* [[Gallegan]]: [[camelo]]
+* German: [[Kamel]] {{n}}
+* Greek: [[καμήλα]] '' ''
+* Hungarian: [[teve]]
+* Icelandic: [[úlfaldi]]
+* Indonesian: [[]]
+* Irish: [[camall]]
+* Italian: [[cammello]] {{m}}
+* Japanese: [[駱駝]] ([[ラクダ]], rakuda)
 {{mid}}
-*[[Ladin]]: [[camel]]
-*Latvian: [[kamielis]]
-*Lithuanian: [[kupranugaris]]
+* [[Ladin]]: [[camel]]
+* Latvian: [[kamielis]]
+* Lithuanian: [[kupranugaris]]
 * {{trreq|Lower Sorbian}}
-*[[Macedonian]]: [[камила]] ([[kamila]])
-*Maltese: [[ġemel]]
-*Norwegian: [[kamel]]
-*[[Occitan]]: [[camèl]]
-*Polish: [[wielbłąd]] '' ''
-*Portuguese: [[camelo]]
-*Romanian: [[cămilă]]
+* [[Macedonian]]: [[камила]] ([[kamila]])
+* Maltese: [[ġemel]]
+* Norwegian: [[kamel]]
+* [[Occitan]]: [[camèl]]
+* Polish: [[wielbłąd]] '' ''
+* Portuguese: [[camelo]]
+* Romanian: [[cămilă]]
 * [[Romansch]]: [[chamel]]
-*[[Romany]]: [[gumila]] {{f}}
-*[[Sami]]: [[kamela]]
-*[[Sardinian]]: [[camellu]], [[cammellu]]
-*[[Scottish]]: [[càmhal]]
-*Serbian: [[камила]] ([[kamila]])
-*Slovak: [[ťava]], [[dromedár]]
-* [[Slovene]]: [[kamela]], [[dromedar]]
-*Spanish: [[camello]], [[dromedario]] '' ''
-*Swedish: [[kamel]], [[dromedar]]
-*Turkish: [[deve]], [[hecin]]
-*Ukrainian: [[верблюд]] ([[verbljud]])
-*[[Upper Sorbian]]: [[kamel]]
-*Welsh: [[camel]]
+* [[Romany]]: [[gumila]] {{f}}
+* [[Sami]]: [[kamela]]
+* [[Sardinian]]: [[camellu]], [[cammellu]]
+* [[Scottish]]: [[càmhal]]
+* Serbian: [[камила]] ([[kamila]])
+* Slovak: [[ťava]], [[dromedár]]
+* Slovene: [[kamela]], [[dromedar]]
+* Spanish: [[camello]], [[dromedario]] '' ''
+* Swedish: [[kamel]], [[dromedar]]
+* Turkish: [[deve]], [[hecin]]
+* Ukrainian: [[верблюд]] ([[verbljud]])
+* [[Upper Sorbian]]: [[kamel]]
+* Welsh: [[camel]]
 {{bottom}}
 
 ===External links===
-*[[w:dromedary|Wikipedia article on Camelus Dromedarius]]
+* [[w:dromedary|Wikipedia article on Camelus Dromedarius]]
 
 [[Category:Taxonomic names]]
 
