/* Latin */ expand & cleanup <species#5965786>

--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -103,16 +103,32 @@
 ==Latin==
 
 ===Etymology===
-{{term|specere|lang=la||to see}} + {{term|-ies|lang=la}} suffix signifying [[abstract]] noun.
+From {{term|specio|speciō|see|lang=la}} + {{term|-ies|-iēs|lang=la}} suffix signifying [[abstract]] noun.
 
 ===Pronunciation===
-* {{audio|La-species.OGG|audio}}
+* {{a|Classical}} {{IPA|/ˈspe.ki.eːs/|lang=la}}
+*: {{audio|la-cls-species.ogg|Audio (Classical)}}
+* {{a|Ecclesiastical}} {{IPA|/ˈspe.tʃi.ɛs/|lang=la}}
+*: {{audio|La-species.OGG|Audio (Ecclesiastical)}}
 
 ===Noun===
-{{infl|la|noun|head=speciēs|gender=f|genitive|[[speciei|speciēī]]}}
+{{la-noun|speciēs|speciei|speciēī|f|fifth}}
 
-# [[view]]; [[appearance]]; [[vision]]; [[dream]]; [[semblance]]
-{{attention|la}} <!-- needs declension table -->
+# a [[seeing]], [[view]], [[look]]
+# a [[spectacle]], [[sight]]
+# external [[appareance]]; general [[outline]] or [[shape]]
+# [[semblance]], [[pretence]], [[pretext]], outward [[show]]
+# [[show]], [[display]]
+# {{figurative|lang=la}} [[vision]], [[dream]], [[apparition]]
+# {{figurative|lang=la}} [[honor]], [[reputation]]
+# {{figurative|lang=la}} a [[kind]], [[quality]], [[species]]
+# {{law|later|lang=la}} a [[special]] [[case]]
+
+====Inflection====
+{{la-decl-5th|speci}}
+
+====Deescendants====
+* English: {{l|en|species}}
 
 [[zh-min-nan:species]]
 [[de:species]]
