--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
-===Etymology===
-From [[Middle English]] ''[[fraccioun]]'' (a breaking), from [[Anglo-Norman]], from {{etyl|la}} {{term|fractio||a breaking, a breaking into pieces, in ML. a fragment, portion}}, from {{term|frangere||to break}}, pp. {{term|fractus}}.
+a shard
+or a piece
 
 ===Pronunciation===
 * {{enPR|frăkʹshən}}, {{IPA|/ˈfræk.ʃən/}}, {{SAMPA|/"fr{kS@n/}}
