+ cat <ha'pennies#5971174>

--- a/en/h/ha'pennies.746681.wikitext
+++ b/en/h/ha'pennies.746681.wikitext
@@ -6,6 +6,7 @@
 # {{plural of|[[ha'penny#English|ha’penny]]}}
 
 [[Category:English plurals ending in "-ies"]]
+[[Category:English contractions]]
 
 [[ar:ha'pennies]]
 [[no:ha'pennies]]
