/* Translations */ fi <bleed#5972210>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -51,6 +51,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 
 {{trans-top|remove air bubbles from a pipe}}
 * Czech: {{t-|cs|odvzdušnit}}
+* Finnish: {{t|fi|ilmastaa}}
 {{trans-mid}}
 * Spanish: {{t-|es|purgar}}
 {{trans-bottom}}
