--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|ang}} {{term|stæf}}, from {{proto|Germanic|staƀoz}}.  Cognate with Dutch {{term|staf}}, German {{term|Stab}}, Swedish {{term|staf}}.
+{{etyl|ang}} {{term|stæf}}, from {{proto|Germanic|staƀoz}}.  Cognate with Dutch {{term|staf}}, German {{term|Stab}}, Swedish {{term|stav}}.
 
 ===Pronunciation===
 * stäf, {{IPA|/stɑːf/}}, /<tt>stA:f</tt>/
