--- a/en/m/Maccabees.801819.wikitext
+++ b/en/m/Maccabees.801819.wikitext
@@ -1,9 +1,16 @@
 ==English==
+{{wikipedia}}
 {{book of the Bible|Books of the Maccabees}}
+
+===Noun===
+'''Maccabees'''
+
+# {{plural of|Maccabee}}
 
 ===Proper noun===
 {{en-proper-noun}}
 # {{biblical}}  A book of the [[Old Testament]] [[Apocrypha]].
+# {{history}} A Jewish [[liberation]] movement who fought for, and established independence in the [[Land of Israel]] during the second and first centuries BC.
 
 ====Related terms====
 *[[Macc.]]
