--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -115,6 +115,10 @@
 #: ''He kept '''badgering''' her about her bad habits.''
 # {{UK|informal}} To [[pass gas]]; to [[fart]].
 
+====Antonyms====
+'''badger'''
+# 
+
 =====Translations=====
 {{trans-top|pester}}
 * Dutch: [[lastigvallen]], [[plagen]]
