--- a/en/h/Hildegard.855804.wikitext
+++ b/en/h/Hildegard.855804.wikitext
@@ -6,7 +6,7 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{given name|female}} borrowed from German in the 19th century, in occasional use.
+# {{given name|female|from=Germanic}} borrowed from German in the 19th century, in occasional use.
 
 {{wikipedia|Hildegard of Bingen}}
 
