--- a/en/h/Hildegarde.855805.wikitext
+++ b/en/h/Hildegarde.855805.wikitext
@@ -3,4 +3,4 @@
 ===Proper noun===
 {{en-proper noun}}
 
-# {{given name|female}}, variant of [[Hildegard]].
+# {{given name|female|from=Germanic}}, variant of [[Hildegard]].
