--- a/en/j/Jilly.741404.wikitext
+++ b/en/j/Jilly.741404.wikitext
@@ -3,4 +3,6 @@
 ===Proper noun===
 {{en-proper-noun}}
 
-# {{given name|female}}, a diminutive of [[Jill]], [[Jillian]] or [[Julia]].
+# A [[diminutive]] of the female [[given name]]s [[Jill]], [[Jillian]] or [[Julia]].
+
+[[Category:English diminutives of female given names]]
