--- a/en/c/consume.34056.wikitext
+++ b/en/c/consume.34056.wikitext
@@ -81,8 +81,9 @@ From {{etyl|la}} ''[[consumere]]''.
 ===Verb===
 {{es-verb-form|consumir}}
 
-# {{es-verb form of|mood=ind|tense=pres|num=s|pers=2|formal=y|ending=ir|verb=[[consumir]]}}
-# {{es-verb form of|mood=ind|tense=pres|num=s|pers=3|ending=ir|verb=[[consumir]]}}
+# {{es-verb form of|ending=ir|mood=imperative|sense=affirmative|pers=2|formal=no|number=singular|[[consumir]]}}
+# {{es-verb form of|ending=ir|mood=indicative|tense=present|pers=2|formal=yes|number=singular|[[consumir]]}}
+# {{es-verb form of|ending=ir|mood=indicative|tense=present|pers=3|number=singular|[[consumir]]}}
 
 [[fr:consume]]
 [[io:consume]]
