--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -1,7 +1,8 @@
 ==English==
 {{wikipedia}}
 
-Minnesota
+===Etymology===
+From {{etyl|es}} ''[[las]] [[vegas]]'' 'the meadows'
 
 ===Proper noun===
 {{en-proper-noun}}
@@ -9,8 +10,7 @@ Minnesota
 # A desert city in [[Nevada]], USA, known for its large hotels, extravagant entertainment and dining, and [[gambling]].
 
 ====Synonyms====
-* [[Minnesota
-]]
+* [[Vegas]]
 * [[Sin City]]
 * [[The Strip]]
 
