-# +* in Related terms section <EEG#5995559>

--- a/en/e/EEG.26244.wikitext
+++ b/en/e/EEG.26244.wikitext
@@ -1,12 +1,13 @@
 ==English==
+
 ==={{initialism}}===
 '''EEG'''
 
-#[[electroencephalogram]]
-#[[electroencephalograph]]
+# [[electroencephalogram]]
+# [[electroencephalograph]]
 
 ====Related terms====
-#[[electroencephalography]]
+* [[electroencephalography]]
 
 [[Category:Medicine]]
 
