/* Translations */ +sco <rabbit#5996953>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -185,6 +185,7 @@ From [[Cockney rhyming slang]] ''[[rabbit and pork]]'', to talk.
 * Czech: {{t-|cs|žvanit}}
 * Finnish: [[pälättää]], [[pälpättää]]
 {{trans-mid}}
+* [[Scots]]: {{t-|sco|blether}}
 {{trans-bottom}}
 
 ====See also====
