--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -79,13 +79,13 @@ From Northern [[French]].
 * Irish: [[coinín]]
 * Italian: {{t+|it|coniglio|m}}
 * Japanese: [[兎]] ([[うさぎ]], [[ウサギ]], usagi)
-* [[Judeo-Spanish]]: [[konejo]]
 * Korean: [[토끼]] (tokki)
 * Kurdish:
 *: Kurmanji: {{t|ku|kêroşk}}, {{t|ku|xirrnîfk}}
 *: Sorani: {{KUchar|[[که‌روێشک]]}} (kêrwişk)
 {{trans-mid}}
 * [[Ladin]]: [[conicio]]
+* [[Ladino]]: [[konejo]]
 * Latin: {{t-|la|cuniculus|m}}
 * Latvian: [[trusis]]
 * Lithuanian: {{t+|lt|triušis|xs=Lithuanian}}
