iwiki +sw, th <island#6001298>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -254,6 +254,7 @@ isolate:
 [[id:island]]
 [[it:island]]
 [[kk:island]]
+[[sw:island]]
 [[ku:island]]
 [[lo:island]]
 [[la:island]]
@@ -271,6 +272,7 @@ isolate:
 [[sv:island]]
 [[ta:island]]
 [[te:island]]
+[[th:island]]
 [[vi:island]]
 [[tr:island]]
 [[uk:island]]
