/* Noun */ tidy <simple#6012680>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -75,10 +75,12 @@
 ===Noun===
 {{en-noun}}
 
-# {{context|jargon|medicine}} A preparation made from one plant, as opposed to something made from more than one plant.
+# {{medicine}} A preparation made from one plant, as opposed to something made from more than one plant.
 
 ====Translations====
+{{trans-top|preparation from one plant}}
 * Spanish: {{t+|es|simple|m}}
+{{trans-bottom}}
 
 [[Category:1000 English basic words]]
 
