sorted/rebalanced translations <simple#6012758>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -81,6 +81,7 @@
 ====Translations====
 {{trans-top|preparation from one plant}}
 * Spanish: {{t+|es|simple|m}}
+{{trans-mid}}
 {{trans-bottom}}
 
 [[Category:1000 English basic words]]
