--- a/en/m/Monsignor.720231.wikitext
+++ b/en/m/Monsignor.720231.wikitext
@@ -6,3 +6,7 @@
 {{en-noun|Monsignori}}
 
 # An [[ecclesiastic]] [[title]] bestowed on some [[Roman Catholic]] [[cleric]]s by the [[Pope]]
+
+
+===Related Terms===
+* ''Abbreviation'': [[Msgr.]] or [[Mons.]]
