--- a/en/p/Pax Romana.855978.wikitext
+++ b/en/p/Pax Romana.855978.wikitext
@@ -5,7 +5,7 @@ From Latin.  Coined by [[w:Edward Gibbon|Edward Gibbon]].
 
 ===Proper noun===
 {{en-proper noun|sg=[[Pax]] [[Romana]]}}
-# The long period of relative peace and minimal expansion by military force experienced by the Roman Empire between 27 BC and 180 AD.
+# The long period of relative peace and minimal expansion by military force experienced by the Roman Empire between 27 BC and 180 AD. This peace was brought the Romans by Caesar Augustus.
 
 ====Synonyms====
 *[[Pax Augusta]]
