/* Translations */ +hy <leather#6023709>

--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -22,6 +22,7 @@ Old English ''[[leþer]]''
 {{trans-top|material produced by tanning animal skin}}
 * Albanian: [[lëkurë]]
 * Arabic: {{Arab|[[جلد]]}} (jild) {{m}}
+* Armenian: {{t|hy|կաշի|sc=Armn|tr=kaši}}
 * Bosnian: {{t-|bs|koža|f}}
 * [[Catalan]]: [[cuir]] {{m}}
 * Chinese: [[皮革]] (pí gé)
