--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -28,6 +28,7 @@
 * Latvian: [[likme]] {{f}}
 * Polish: {{t+|pl|zakład|m}}
 * Portuguese: {{t-|pt|aposta}}
+* Russian: {{t|ru|ставка|f|sc=cyrl|tr=stávka}}, {{t|ru|заклад|m|sc=cyrl|tr=zaklád}}
 * Serbian: [[opklada]] {{m}}
 * Slovene: {{t-|sl|stava|f}}
 * Spanish: {{t-|es|apuesta}}
