--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -49,6 +49,7 @@
 * [[Breton]]: [[pemoc’h]] {{m}} [[moc'h]] {{p}}
 * Bulgarian: {{t+|bg|свиня|f|tr=svinja|sc=Cyrl}}
 * CJK Characters: [[豬]], [[猪]]; [[豚]]; [[豕]]
+* Campidanese Sardinian: [[procu]] {{m}}, [[mannali]] {{m}}, [[sue]] {{f}}
 * [[Catalan]]: [[porc]] {{m}}, [[truja]] {{f}}
 * [[Cebuano]]: [[baboy]]
 * [[Chamorro]]: [[babui]]
@@ -102,8 +103,6 @@
 * [[Romansch]]: [[portg]]
 * Russian: {{t|ru|свинья|f|tr=svin’já|sc=Cyrl}}
 * [[Sami]]: [[spiidni]]
-* Sardinian (northern): [[porcu]] {{m}}, [[mannale]] {{m}}, [[sue]] {{f}}
-* Sardinian (southern): [[procu]] {{m}}, [[mannali]] {{m}}, [[sue]] {{f}}
 * [[Scottish Gaelic]]: [[muc]] {{f}}
 * Serbian:
 *: Cyrillic: [[свиња#Serbian|свиња]] {{f}}
@@ -206,6 +205,12 @@
 * Finnish: {{t+|fi|porsas}}
 {{trans-mid}}
 {{trans-bottom}}
+
+{{checktrans-top}}
+* {{ttbc|Gallurese Sardinian}}: [[porcu]] {{m}}, [[mannale]] {{m}}, [[sue]] {{f}}
+{{checktrans-mid}}
+* {{ttbc|Sassarese Sardinian}}: [[porcu]] {{m}}, [[mannale]] {{m}}, [[sue]] {{f}}
+{{checktrans-bottom}}
 
 ====Derived terms====
 {{rel-top|terms derived from the noun "pig"}}
