--- a/en/z/zoophile.802731.wikitext
+++ b/en/z/zoophile.802731.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun}}
 
-# A person sexually attracted by [[animal]]s.
+# A person sexually attracted to [[animal]]s.
 
 ====Related terms====
 * [[zoophilia]]
