--- a/en/m/microdot.720320.wikitext
+++ b/en/m/microdot.720320.wikitext
@@ -6,6 +6,13 @@
 
 # A [[photographic]] [[image]] that has been [[reduce]]d in size to that of a [[dot]] (typically around 1mm in size and circular) in order to escape detection. <ref name=microdots>[http://www.micro-dots.org/ DotGuard Microdots]</ref>.
 
+====Translations====
+* Dutch: [[microdot#Dutch|microdot]]
+* French: [[micropoint]]
+* German: [[Mikropunkt]]
+* Polish: [[mikrokropka]]
+* Russian: [[микроточка]]
+
 ===References===
 <references/>
 
