sorted/rebalanced translations, trans link [[Ossetian]] <island#6059320>

--- a/en/i/island.4316.wikitext
+++ b/en/i/island.4316.wikitext
@@ -57,8 +57,8 @@
 * [[Breton]]: [[enez]]
 * Bulgarian: {{t+|bg|остров|m|tr=òstrov|sc=Cyrl}}
 * Burmese: [[ကယ့န္း]] (kyùn)
-* [[Catalan]]: {{t+|ca|illa|f}}
 * CJKV Characters: [[島]], [[嶋]], [[岛]]
+* [[Catalan]]: {{t+|ca|illa|f}}
 * Chinese: [[島]], [[岛]] (dǎo); [[島嶼]], [[岛屿]] (dǎoyǔ)
 *: Min Nan: [[tó-sū]]
 * [[Corsican]]: [[isula]] {{f}}
@@ -115,7 +115,7 @@
 * [[Occitan]]: {{t-|oc|illa|f|xs=Occitan}}
 * Old English: {{t-|ang|ieg|f|alt=īeġ|xs=Old English}}
 * {{trreq|Oriya}}
-* Ossetian: [[сакъадах]] (saqadax)
+* [[Ossetian]]: [[сакъадах]] (saqadax)
 * Persian: {{fa-Arab|[[جزیره]]}} (jazîreh)
 * Polish: {{t+|pl|wyspa|f}}
 * Portuguese: {{t+|pt|ilha|f}}
