--- a/en/c/crook.34069.wikitext
+++ b/en/c/crook.34069.wikitext
@@ -56,8 +56,8 @@
 
 # {{context|AU|NZ|slang}} [[ill|Ill]], [[sick]].
 # {{context|AU|NZ|slang}} not [[right]], not up to [[standard]]
-:* ''That work you did on my car is '''crook''' mate''
-:* ''Not turning up for training was pretty '''crook'''.''
+#: ''That work you did on my car is '''crook''' mate''
+#: ''Not turning up for training was pretty '''crook'''.''
 
 ===Quotations===
 * Other Australian Usage to be sorted out
