added inflection line for English/Phrase <my fellow Americans#6066774>

--- a/en/m/my fellow Americans.803559.wikitext
+++ b/en/m/my fellow Americans.803559.wikitext
@@ -1,3 +1,6 @@
 ==English==
+
 ===Phrase===
-#{{US}} An attempt to establish [[credibility]] and [[connectivity]] with an [[audience]] originating mostly from its use in speeches by US [[president]]s.
+{{infl|en|phrase}}
+
+# {{US}} An attempt to establish [[credibility]] and [[connectivity]] with an [[audience]] originating mostly from its use in speeches by US [[president]]s.
