/* Adjective */ + sense <mind-bending#6079792>

--- a/en/m/mind-bending.720299.wikitext
+++ b/en/m/mind-bending.720299.wikitext
@@ -3,4 +3,6 @@
 ===Adjective===
 {{en-adj|pos=[[mind]]-[[bending]]}}
 
-# [[hallucinogenic]]
+# [[hallucinogenic|Hallucinogenic]].
+# [[mental|Mentally]] [[taxing]].
+#: ''The book contains fifteen '''mind-bending''' mazes.''
