/* Derived terms */ <break#6084408>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -95,7 +95,7 @@ The sense relating to a spell of weather is most likely to be used after a perio
 * [[break open]]
 * [[break out]]<!--phrasal verb-->
 <!--the noun "break-out" is derived from the verb "break out"-->
-* [[break ranks]]
+* [[break rank]]
 * [[break someone's heart]]
 {{rel-mid3}}
 * [[break stride]]
