/* English */ +trans table, formatting <PVC#6092673>

--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -1,16 +1,19 @@
 ==English==
+{{wikipedia|PVC_(disambiguation)}}
 
 ==={{initialism}}===
-{{wikipedia|PVC_(disambiguation)}}
 '''PVC'''
 
-#{{organic compound}} [[polyvinyl chloride|''p''oly''v''inyl ''c''hloride]]
-#{{medicine}} [[premature ventricular contraction|'''P'''remature '''V'''entricular '''C'''ontraction]] of the heart.
+# {{organic compound}} [[polyvinyl chloride|''p''oly''v''inyl ''c''hloride]]
+# {{medicine}} [[premature ventricular contraction|'''P'''remature '''V'''entricular '''C'''ontraction]] of the heart.
 
 ====Translations====
-{{rfc-trans}}
-{{trans-top|}}
-*[[Dutch]]: [[#Dutch|PVC]]
+{{trans-top|organic compound}}
+* Dutch: [[#Dutch|PVC]]
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|medicine}}
 {{trans-mid}}
 {{trans-bottom}}
 
