* before R:Century 1911, * before R:Webster 1913 <mill#6093789>

--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -170,8 +170,8 @@ From the noun ''mill''
 {{trans-bottom}}
 
 ===References===
-{{R:Century 1911}}
-{{R:Webster 1913}}
+* {{R:Century 1911}}
+* {{R:Webster 1913}}
 
 ----
 
