* before R:Webster 1913 <partage#6094096>

--- a/en/p/partage.741229.wikitext
+++ b/en/p/partage.741229.wikitext
@@ -8,9 +8,10 @@
 # {{obsolete}} A [[part]], [[portion]] or [[share]].
 
 ===References===
-{{R:Webster 1913}}
+* {{R:Webster 1913}}
 
 ----
+
 ==French==
 
 ===Etymology===
