clean-up <cop#6099363>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -23,7 +23,7 @@ From {{etyl|la}} and {{etyl|fro}}  {{term|capere||to capture}}.
 
 ===Etymology 2===
 Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}} above, i.e. a criminal.
-Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] or uniforms or on those worn by the first [[London]] Police Force of the 1820s, though this is often stated to be a [[folk etymology]]. 'Cop' has long existed as a verb meaning "to take or seize"; the first example of 'cop' taking the meaning 'to arrest' appeared in 1844, and the word swiftly moved from simply meaning 'to arrest into police custody' to encompass the individual doing the detaining. <ref> [http://www.snopes.com/language/acronyms/cop.asp Snopes Article]</ref>
+Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] or uniforms or on those worn by the first [[London]] Police Force of the 1820s, though this is often stated to be a [[folk etymology]]. 'Cop' has long existed as a verb meaning "to take or seize"; the first example of 'cop' taking the meaning 'to arrest' appeared in 1844, and the word swiftly moved from simply meaning 'to arrest into police custody' to encompass the individual doing the detaining. (Reference: http://www.snopes.com/language/acronyms/cop.asp Snopes Article )
 
 ====Noun====
 {{en-noun}}
@@ -132,6 +132,3 @@ A shortened form of [[copain]].
 [[tr:cop]]
 [[vo:cop]]
 [[zh:cop]]
-
-==References==
-{{reflist}}
