* before R:Webster 1913 <embay#6099786>

--- a/en/e/embay.802830.wikitext
+++ b/en/e/embay.802830.wikitext
@@ -7,7 +7,7 @@
 # {{obsolete}} To [[bathe]], [[soothe]] or [[lull]].
 
 ===References===
-{{R:Webster 1913}}
+* {{R:Webster 1913}}
 
 [[vi:embay]]
 [[zh:embay]]
