minor copyedits <foo-foo#6101510>

--- a/en/f/foo-foo.855761.wikitext
+++ b/en/f/foo-foo.855761.wikitext
@@ -1,8 +1,8 @@
 {{also|fufú}}
 ==English==
+{{wikipedia|fufu|foo-foo}}
 
 ===Alternative spellings===
-{{wikipedia|fufu|foo-foo}}
 * [[foofoo]]
 * [[fufu]]
 
@@ -12,7 +12,7 @@
 # A [[dish]] of boiled, mashed [[yam]]s, [[plantain]], or other starchy vegetables, common as food in [[equatorial]] [[Africa]] and the [[Caribbean]]. Sold in speciality stores {{US}} in dry powdered or granulated form. 
 #* '''1958''', [[w:Chinua_Achebe|Chinua Achebe]], ''Things Fall Apart'', ch 11:
 #*: Ezinma and her mother sat on a mat on the floor after their supper of yam foo-foo and bitter-leaf soup.
-# {{US|Southern}} A food that offers little more than starchy carbohydrates.
-#*''Her new potato casserole was just glorified '''foo-foo'''.''
-# {{US|Southern}} A trite, mundane, or unbelievable subject or process.
-#*''He thinks his ideas are great; we think they're '''foo-foo'''.''
+# {{US|Southern}} A [[food]] that offers little more than starchy [[carbohydrate]]s.
+#:''Her new potato casserole was just glorified '''foo-foo'''.''
+# {{US|Southern}} A [[trite]], [[mundane]], or [[unbelievable]] subject or process.
+#:''He thinks his ideas are great; we think they're '''foo-foo'''.''
