+{{count page}} in statistics <barbecue stopper#6102261>

--- a/en/b/barbecue stopper.803312.wikitext
+++ b/en/b/barbecue stopper.803312.wikitext
@@ -4,3 +4,4 @@
 {{en-noun}}
 
 # ''Australian slang.'' A topic of conversation which is controversial and of contemporary significance. Hence, a social gaffe.
+{{count page|[[Wiktionary:Page count]]}}
