/* Translations */ he to ttbc since it looks like an infinitive form rather than a plain dictionary lemma <bleed#6114843>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -37,15 +37,14 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 * {{trreq|Georgian}}
 * German: {{t+|de|bluten}}
 * {{trreq|Greek}}
-* Hebrew: [[לדמם]] (le'damem)
 * {{trreq|Hindi}}
 * Hungarian: {{t+|hu|vérzik}}
 * {{trreq|Icelandic}}
 * Indonesian: [[darah|berdarah]], [[keluar|mengeluarkan]] [[darah]], [[kucur|mengucurkan]] [[darah]], [[alir|mengalirkan]] [[darah]]
 * {{trreq|Irish}}
 * Italian: {{t-|it|sanguinare}}
-{{trans-mid}}
 * Japanese: [[出血]]する ([[しゅっけつ]]する, shukketsu-suru), [[血]]を[[流す]] ([[ち]]を[[ながす]], chi-wo-nagasu)
+{{trans-mid}}
 * {{trreq|Khmer}}
 * {{trreq|Korean}}
 * {{trreq|Latin}}
@@ -75,6 +74,10 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 {{trans-mid}}
 * Spanish: {{t-|es|purgar}}
 {{trans-bottom}}
+
+{{ttbc-top}}
+* Hebrew: [[לדמם]] (le'damem)
+{{ttbc-bottom}}
 
 ===References===
 * {{R:Century 1911}}
