--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -76,7 +76,7 @@ From {{etyl|ang}} {{term|bledan|lang=ang}}
 {{trans-bottom}}
 
 {{ttbc-top}}
-* Hebrew: [[לדמם]] (le'damem)
+* {{ttbc|Hebrew}}: [[לדמם]] (le'damem)
 {{ttbc-bottom}}
 
 ===References===
