/* Translations */ +be,mn <thing#6117181>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -43,9 +43,9 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * {{trreq|Afrikaans}}
 * Albanian: {{t-|sq|send|m|xs=Albanian}}
 * Arabic: {{Arab|[[شيء]]}} (šæy’) {{m}}
-* Armenian: [[իր]] (ir), [[բան]] (ban)
+* Armenian: {{t|hy|իր|sc=Armn|tr=ir}}, {{t|hy|բան|sc=Armn|tr=ban}}
 * [[Basque]]: [[gauza]]
-* {{trreq|Belarusian}}
+* Belarusian: {{t|be|рэч|f}}
 * Bosnian: {{t-|bs|stvar|f}}
 * [[Breton]]: [[tra]] {{f}}
 * Bulgarian: [[нещо]] (nešto) {{n}}, [[предмет]] (predmet) {{m}}, [[вещ]] (vešt) {{f}}
@@ -87,7 +87,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 * Latvian: {{t-|lv|lieta|f|xs=Latvian}}
 * {{trreq|Lithuanian}}
 * [[Marathi]]: [[वस्तु]] (vastu)
-* {{trreq|Mongolian}}
+* Mongolian: {{t|mn|юм}}
 * {{trreq|Nepali}}
 * Norwegian: {{t+|no|ting|m}}, {{t-|no|dings|m}}, {{t+|no|greie|f}}
 * Old English: {{t-|ang|þing|n|xs=Old English}}
@@ -120,7 +120,7 @@ From {{etyl|enm}}, from {{etyl|ang}} ''[[þing#Old English|þing]]''.
 {{trans-top|any physical or psychical entity}}
 * Albanian: {{t-|sq|send|xs=Albanian}}
 * Arabic: {{Arab|[[شيء]]}} (šæy’) {{m}}
-* Armenian: [[իր]] (ir), [[բան]] (ban)
+* Armenian: {{t|hy|իր|sc=Armn|tr=ir}}, {{t|hy|բան|sc=Armn|tr=ban}}
 * [[Basque]]: [[gauza]]
 * CJKV Characters: [[物]], [[事]]
 * Chinese:
